# nyx

./: .gitignore  CMakeLists.txt  nyx.sublime-project  nyx.sublime-workspace
shaders/: shader.vert
src/: main.cpp
